gcc/testsuite/rust/rustc/ui/error-codes/E0077.rs
#![feature(repr_simd)]

#[repr(simd)]
struct Bad(String); // { dg-error ".E0077." "" { target *-*-* } }

fn main() {
}

